# libNavGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
cmake/toolchains/: mingw-linux.cmake
src/: bvhbuilder.cpp  dllmain (2).cpp  dllmain.cpp  framework.h
